# src/controllers/auth.controller.ts
@@ -23,7 +23,27 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().email().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Password must contain at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test(
+      "at-least-one-number",
+      "Password must contain at least one number",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*\d)/;
+        return regex.test(value);
+      }
+    ),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "Password not matched"),
@@ -31,6 +51,13 @@ const registerValidateSchema = Yup.object({
 
 export default {
   async register(req: Request, res: Response) {
+    /**
+      #swagger.tags = ["Auth"]
+      #swagger.requestBody = {
+        required: true,
+        schema: {$ref: "#/components/schemas/RegisterRequest"}
+      }
+     */
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TRegister;
 
@@ -65,6 +92,7 @@ export default {
 
   async login(req: Request, res: Response) {
     /**
+      #swagger.tags = ["Auth"]
       #swagger.requestBody = {
         required: true,
         schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -84,6 +112,7 @@ export default {
             username: identifier,
           },
         ],
+        isActive: true,
       });
 
       if (!userByIdentifier) {
@@ -124,6 +153,7 @@ export default {
 
   async me(req: IReqUser, res: Response) {
     /**
+      #swagger.tags = ["Auth"]
       #swagger.security = [{
         "bearerAuth": []
       }]
@@ -136,6 +166,50 @@ export default {
       res.status(200).json({
         message: "Success get user profile",
         data: result,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
+
+  async activation(req: Request, res: Response) {
+    /**
+      #swagger.tags = ["Auth"]
+      #swagger.requestBody = {
+        required: true,
+        schema: {$ref: "#/components/schemas/ActivationRequest"}
+      }
+     */
+
+    try {
+      const { code } = req.body as { code: string };
+
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      );
+
+      if (!user) {
+        return res.status(404).json({
+          message: "User not found",
+          data: null,
+        });
+      }
+
+      res.status(200).json({
+        message: "Account activated successfully",
+        data: user,
       });
     } catch (error) {
       const err = error as unknown as Error;
